# content_aggregator

./: Dockerfile  content.db  docker-compose.yml  pyproject.toml
src/aggregator/: database.py  main.py  scraper.py
